--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -266,32 +266,32 @@
   <div class="content">
     <!-- <p class="larger">Got what it takes to become a competitive tennis player?</p> -->
 
-    <section class="content-carousel">
-      <p class="left arrow">&larr;</p>
-      <div class="display-content current">
-        <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
-        </p>
+    <div class="carousel-div">
+      <section class="content-carousel">
+        <p class="left arrow">&larr;</p>
+        <div class="display-content current">
+          <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+          <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
+          </p>
+        </div>
+        <div class="display-content">
+          <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+          <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
+          </p>
+        </div>
+        <p class="right arrow">&rarr;</p>
+      </section>
+      <section class="nav-dots">
+        <div class="nav-dot filled"></div>
+        <div class="nav-dot"></div>
+        <!-- <div class="nav-dot"></div> -->
+        <!-- <div class="nav-dot"></div> -->
+        <!-- <div class="nav-dot"></div> -->
+      </section>
+      <div class="stop-btn">
+        <button class="start-slides btn">Start Slides</button>
+        <button class="stop-slides btn">Stop Slides</button>
       </div>
-      <div class="display-content">
-        <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
-        </p>
-      </div>
-      <p class="right arrow">&rarr;</p>
-    </section>
-
-    <section class="nav-dots">
-      <div class="nav-dot filled"></div>
-      <div class="nav-dot"></div>
-      <!-- <div class="nav-dot"></div> -->
-      <!-- <div class="nav-dot"></div> -->
-      <!-- <div class="nav-dot"></div> -->
-    </section>
-
-    <div class="stop-btn">
-      <button class="start-slides btn">Start Slides</button>
-      <button class="stop-slides btn">Stop Slides</button>
     </div>
 
     <!-- <p>Sign up and find out...</p> -->
