--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -91,87 +91,123 @@ main#landing {
     justify-content: space-between;
     align-items: center;
 
-    .content-carousel {
+    .carousel-div{
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
+      gap: 32px;
 
-      .arrow {
-        font-size: 3rem;
-        background-color: #3e9c94;
-        color: #fff;
+      padding: 100px 0;
 
-        border: 4px solid #000;
-        box-shadow: 8px 4px 0 #7ec0de;
-
-        padding: 8px 16px;
-        // width: fit-content;
-        border-radius: 50%;
-
-        &:hover {
-          background-color: #54d39a;
-          cursor: pointer;
-      }
-      
-      }
-
-      .display-content {
-        display: none;
-
-        img {
-          min-width: 300px;
-          width: 40vw;
-          max-width: 300px;
-
-          object-fit: cover;
-        }
-
-        .info {
-          font-size: 1.2rem;
-          width: 75%;
-        }
-      }
-
-      .current {
+      .content-carousel {
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
-    }
-    }
-
-    .nav-dots {
-      // margin-top: -15vh;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-
-      gap: 8px;
-
-      .nav-dot {
-        background-color: #ddd;
-        color: #555;
-
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-
-        border: 1px solid $brand-colour;
+        align-items: center;
+  
+        .arrow {
+          font-size: 3rem;
+          background-color: #3e9c94;
+          color: #fff;
+  
+          border: 4px solid #000;
+          box-shadow: 8px 4px 0 #7ec0de;
+  
+          padding: 8px 16px;
+          // width: fit-content;
+          border-radius: 50%;
+  
+          &:hover {
+            background-color: #54d39a;
+            cursor: pointer;
+        }
+        
+        }
+  
+        .display-content {
+          display: none;
+  
+          img {
+            min-width: 300px;
+            width: 40vw;
+            max-width: 300px;
+  
+            object-fit: cover;
+          }
+  
+          .info {
+            font-size: 1.2rem;
+            width: 75%;
+          }
+        }
+  
+        .current {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
       }
-
-      .filled {
-        background-color: #74edb4;
-        transform: scale(1.4);
-    }
-    }
-
-    .stop-btn {
-      button {
-        margin-bottom: 0;
+      }
+  
+      .nav-dots {
+        // margin-top: -15vh;
+  
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+  
+        gap: 8px;
+  
+        .nav-dot {
+          background-color: #ddd;
+          color: #555;
+  
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+  
+          border: 1px solid $brand-colour;
+        }
+  
+        .filled {
+          background-color: #74edb4;
+          transform: scale(1.4);
+      }
+      }
+  
+      .stop-btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+  
+        gap: 16px;
+  
+        // margin-top: 40px;
+        
+        button {
+          margin-bottom: 0;
+        }
+  
+        .btn {
+          background-color: #a6734a;
+          color: #fff;
+          font-size: 1.3rem;
+          font-weight: 700;
+  
+          border: 2px solid #000;
+          box-shadow: 6px 6px 0 #f4c689;
+  
+          border-radius: 8px;
+          padding: 8px 16px;
+  
+          &:hover {
+            cursor: pointer;
+            background-color: #d5ad62;
+        }
+        
+        }
       }
     }
+
   }
 
   
