--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -250,7 +250,8 @@ main#landing div.content .carousel-div .content-carousel .display-content {
   display: none;
   background-color: #578DDD;
   color: #FFFFFF;
-  width: 750px;
+  width: 80vw;
+  max-width: 750px;
   border-radius: 16px;
   border: 1px solid #e5e5e5;
 }
@@ -265,7 +266,8 @@ main#landing div.content .carousel-div .content-carousel .display-content img {
 }
 main#landing div.content .carousel-div .content-carousel .display-content .info {
   font-size: 1.2rem;
-  width: 750px;
+  width: 80vw;
+  max-width: 750px;
   border-radius: 16px;
   padding: 16px 32px;
   box-sizing: border-box;
