--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -136,6 +136,7 @@ main#landing {
   
           .info {
             font-size: 1.2rem;
+            font-weight: 400;
 
             width: 80vw;
             max-width: 750px;
