--- a/app/project/tennis/static/tennis/styles/_resources.scss
+++ b/app/project/tennis/static/tennis/styles/_resources.scss
@@ -53,3 +53,15 @@ main#resource {
     }
   }
 }
+
+@media only screen and (max-width: 480px) {
+  main#resource {
+    .resource-video {
+      width: 80vw;
+    }
+
+    .resource-content {
+      width: 90%;
+    }
+  }
+}
