--- a/app/project/tennis/static/tennis/styles/styles.css
+++ b/app/project/tennis/static/tennis/styles/styles.css
@@ -136,6 +136,14 @@ main#resource a .resource-link {
   margin-top: 48px;
 }
 
+@media only screen and (max-width: 480px) {
+  main#resource .resource-video {
+    width: 80vw;
+  }
+  main#resource .resource-content {
+    width: 90%;
+  }
+}
 main#tennis {
   padding: 16px 32px;
 }
