--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -285,7 +285,17 @@
           </p>
         </div>
         <div class="display-content">
+          <img src="{% static './registration/images/awards.svg' %}" alt="Achievements Still.">
+          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
+          </p>
+        </div>
+        <div class="display-content">
           <img src="{% static './registration/images/calendar-page.svg' %}" alt="Calendar Page Still.">
+          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
+          </p>
+        </div>
+        <div class="display-content">
+          <img src="{% static './registration/images/learn-page.svg' %}" alt="Learn Page Still.">
           <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
           </p>
         </div>
@@ -296,8 +306,8 @@
         <div class="nav-dot"></div>
         <div class="nav-dot"></div>
         <div class="nav-dot"></div>
-        <!-- <div class="nav-dot"></div> -->
-        <!-- <div class="nav-dot"></div> -->
+        <div class="nav-dot"></div>
+        <div class="nav-dot"></div>
       </section>
       <div class="stop-btn">
         <button class="start-slides btn">Start Slides</button>
