--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -270,34 +270,29 @@
       <section class="content-carousel">
         <p class="left arrow">&larr;</p>
         <div class="display-content current">
-          <img src="{% static './registration/images/home-page.svg' %}" alt="Home page still.">
-          <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
+          <div class="increase"><img src="{% static './registration/images/home-page.svg' %}" alt="Home page still."></div>
+          <p class="info">Get progress analytics.</p>
+        </div>
+        <div class="display-content">
+          <div class="increase"><img src="{% static './registration/images/feed-page.svg' %}" alt="Feed Page Still."></div>
+          <p class="info">Become part of a community.</p>
+        </div>
+        <div class="display-content">
+          <div class="increase"><img src="{% static './registration/images/profile-page.svg' %}" alt="Profile Page Still."></div>
+          <p class="info">Allow others to connect with you.</p>
+        </div>
+        <div class="display-content">
+          <div class="increase"><img src="{% static './registration/images/awards.svg' %}" alt="Achievements Still."></div>
+          <p class="info">Stay motivated by gaining awards.</p>
+        </div>
+        <div class="display-content">
+          <div><img src="{% static './registration/images/calendar-page.svg' %}" alt="Calendar Page Still."></div>
+          <p class="info">Schedule tennis sessions around YOUR life.
           </p>
         </div>
         <div class="display-content">
-          <img src="{% static './registration/images/feed-page.svg' %}" alt="Feed Page Still.">
-          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
-          </p>
-        </div>
-        <div class="display-content">
-          <img src="{% static './registration/images/profile-page.svg' %}" alt="Profile Page Still.">
-          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
-          </p>
-        </div>
-        <div class="display-content">
-          <img src="{% static './registration/images/awards.svg' %}" alt="Achievements Still.">
-          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
-          </p>
-        </div>
-        <div class="display-content">
-          <img src="{% static './registration/images/calendar-page.svg' %}" alt="Calendar Page Still.">
-          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
-          </p>
-        </div>
-        <div class="display-content">
-          <img src="{% static './registration/images/learn-page.svg' %}" alt="Learn Page Still.">
-          <p class="info">Sequi in, dicta, repudiandae ut officiis sint pariatur quidem culpa facilis quo a? Ab in necessitatibus aliquid unde temporibus dolorum ex minima ad hic, voluptatem repudiandae dolorem quis earum alias blanditiis laborum quo animi optio maiores nam adipisci quae eligendi delectus facilis. In ut cupiditate, pariatur obcaecati consequatur tempore possimus dolores dolorum ipsum ullam, expedita quo quasi.
-          </p>
+          <div><img src="{% static './registration/images/learn-page.svg' %}" alt="Learn Page Still."></div>
+          <p class="info">Learn from the FREE resources available to you.</p>
         </div>
         <p class="right arrow">&rarr;</p>
       </section>
