--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -84,11 +84,13 @@ main#landing {
     align-items: center;
 
     .carousel-div {
+      transform: scale(0.85);
+
       display: flex;
       flex-direction: column;
       gap: 32px;
 
-      padding: 100px 0;
+      padding: 8px 0;
 
       .content-carousel {
         display: flex;
@@ -124,14 +126,19 @@ main#landing {
           border-radius: 16px;
           border: 1px solid #e5e5e5;
   
-          img {
-            min-width: 300px;
-            width: 40vw;
-            max-width: 300px;
-  
-            object-fit: cover;
+          div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
             padding: 12px 24px;
             box-sizing: border-box;
+            min-height: 650px;
+            height: 100%;
+
+            img {    
+              object-fit: cover;
+            }
           }
   
           .info {
@@ -226,8 +233,16 @@ main#landing {
       .carousel-div {
         .content-carousel {
           .display-content {
+            div {
+              transform: scale(0.62);
+            }
+
+            .increase {
+              transform: scale(0.8);
+            }
+
             .info {
-              height: 450px;
+              height: 100px;
               overflow-y: scroll;
             }
           }
