--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -222,10 +222,11 @@ main#landing div.content p.larger {
   font-weight: bold;
 }
 main#landing div.content .carousel-div {
+  transform: scale(0.85);
   display: flex;
   flex-direction: column;
   gap: 32px;
-  padding: 100px 0;
+  padding: 8px 0;
 }
 main#landing div.content .carousel-div .content-carousel {
   display: flex;
@@ -255,14 +256,18 @@ main#landing div.content .carousel-div .content-carousel .display-content {
   border-radius: 16px;
   border: 1px solid #e5e5e5;
 }
-main#landing div.content .carousel-div .content-carousel .display-content img {
-  min-width: 300px;
-  width: 40vw;
-  max-width: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
+main#landing div.content .carousel-div .content-carousel .display-content div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 12px 24px;
   box-sizing: border-box;
+  min-height: 650px;
+  height: 100%;
+}
+main#landing div.content .carousel-div .content-carousel .display-content div img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 main#landing div.content .carousel-div .content-carousel .display-content .info {
   font-size: 1.2rem;
@@ -328,8 +333,14 @@ main#landing div.content .carousel-div .stop-btn .btn:hover {
 }
 
 @media only screen and (max-width: 480px) {
+  main#landing div.content .carousel-div .content-carousel .display-content div {
+    transform: scale(0.62);
+  }
+  main#landing div.content .carousel-div .content-carousel .display-content .increase {
+    transform: scale(0.8);
+  }
   main#landing div.content .carousel-div .content-carousel .display-content .info {
-    height: 450px;
+    height: 100px;
     overflow-y: scroll;
   }
   main#landing div.content .carousel-div .content-carousel .arrow {
