--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -142,8 +142,13 @@ main#landing {
           }
   
           .info {
-            font-size: 1.2rem;
-            font-weight: 400;
+            font-size: 1.6rem;
+            font-weight: 600;
+            text-align: center;
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
             width: 80vw;
             max-width: 750px;
@@ -198,6 +203,7 @@ main#landing {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        margin-top: 48px;
   
         gap: 16px;
         
@@ -244,7 +250,7 @@ main#landing {
             }
 
             .info {
-              height: 100px;
+              height: 150px;
               overflow-y: scroll;
             }
           }
