--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -122,6 +122,7 @@ nav {
   padding: 12px 16px;
   background-color: #FFFFFF;
   position: fixed;
+  z-index: 1;
   bottom: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
