--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -399,6 +399,7 @@ main#profile .modal .modal-content form label {
 main#feed .modal {
   display: none;
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
