--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -310,7 +310,7 @@
       </div>
     </div>
 
-    <p class="action-msg">Wait are you waiting for, <a href="{% url 'signup' %}">sign up</a> today!</p>
+    <p class="action-msg">What are you waiting for, <a href="{% url 'signup' %}">sign up</a> today!</p>
     <p><a href="{% url 'login' %}">Login</a> if you already have an account.</p>
   </div>
 </main>
