--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -272,6 +272,7 @@
     })();
   </script>
 </main>
+<!-- If the user is not authenticated the following is displayed. -->
 {% else %}
 <main id="landing">
   <div class="content">
